<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y86"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/x101"
        android:layout_height="@dimen/y64"
        android:id="@+id/Machines_Recyclerview_Item_picture"
        android:layout_marginRight="@dimen/x16"
        android:layout_marginTop="@dimen/y11"
        android:layout_marginBottom="@dimen/y11"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Machines_RecyclerView_item_name_default"
        android:id="@+id/Machines_Recyclerview_Item_name"
        android:layout_marginTop="@dimen/y11"
        android:textSize="@dimen/x16"
        android:layout_marginLeft="@dimen/x21"
        android:textColor="@color/colorHeavyGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Machines_RecyclerView_item_address_default"
        android:id="@+id/Machines_Recyclerview_Item_address"
        android:layout_below="@+id/Machines_Recyclerview_Item_name"
        android:layout_alignLeft="@+id/Machines_Recyclerview_Item_name"
        android:layout_alignStart="@+id/Machines_Recyclerview_Item_name"
        android:layout_marginTop="@dimen/y6"
        android:textSize="@dimen/x13"
        android:textColor="@color/colorLightGray"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Machines_RecyclerView_item_lowerest_wholesale_default"
        android:id="@+id/Machines_Recyclerview_Item_wholesale"
        android:layout_below="@+id/Machines_Recyclerview_Item_name"
        android:layout_toRightOf="@+id/Machines_Recyclerview_Item_address"
        android:layout_toEndOf="@+id/Machines_Recyclerview_Item_address"
        android:layout_alignTop="@+id/Machines_Recyclerview_Item_address"
        android:paddingLeft="@dimen/x3"
        android:paddingStart="@dimen/x3"
        android:textSize="@dimen/x13"
        android:textColor="@color/colorLightGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Machines_RecyclerView_item_lowerest_wholesale_number_default"
        android:id="@+id/Machines_Recyclerview_Item_lowerest_wholesale_number"
        android:layout_below="@+id/Machines_Recyclerview_Item_name"
        android:layout_toRightOf="@+id/Machines_Recyclerview_Item_wholesale"
        android:layout_toEndOf="@+id/Machines_Recyclerview_Item_wholesale"
        android:layout_alignTop="@+id/Machines_Recyclerview_Item_address"
        android:textSize="@dimen/x13"
        android:textColor="@color/colorLightGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Machines_RecyclerView_item_price_default"
        android:id="@+id/Machines_Recyclerview_Item_price"
        android:layout_alignLeft="@+id/Machines_Recyclerview_Item_name"
        android:layout_alignStart="@+id/Machines_Recyclerview_Item_name"
        android:textSize="@dimen/x16"
        android:textColor="@color/colorLightRed"
        android:layout_below="@+id/Machines_Recyclerview_Item_lowerest_wholesale_number"
        android:layout_marginBottom="@dimen/y11"
        android:layout_marginTop="@dimen/y20"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/colorLightGray"
        android:id="@+id/Machines_RecyclerView_Item_divider"
        android:layout_alignParentBottom="true">
    </RelativeLayout>

</RelativeLayout>